Revised organization of the documentation so that it is browsable on GitHub

--- a/ReadMe.html
+++ b/ReadMe.html
@@ -48,7 +48,7 @@
 
     <div class="container-fluid">
       <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 	<meta charset="utf-8"/>
 	<title>Overview</title>
@@ -72,17 +72,17 @@
 <p>To install and run WildOS, read the following documentation pages:</p>
 
 <ul>
-<li><a href="doc/installing.html">Installing WildOS</a></li>
-<li><a href="doc/configuring.html">Configuring WildOS</a></li>
-<li><a href="doc/running.html">Running WildOS</a></li>
-<li><a href="doc/applications.html">WildOS Applications</a></li>
+<li><a href="doc/html/installing.html">Installing WildOS</a></li>
+<li><a href="doc/html/configuring.html">Configuring WildOS</a></li>
+<li><a href="doc/html/running.html">Running WildOS</a></li>
+<li><a href="doc/html/applications.html">WildOS Applications</a></li>
 </ul>
 
 <h3 id="developpingforwildos">Developping for WildOS</h3>
 
 <p>WildOS is in active development. We need users to give us feedback, contribute code, and create their own applications.</p>
 
-<p>The <code>doc</code> directory contains <a href="doc/index.html">documentation</a> describing the general architecture of the system and how to create new devices and new applications.
+<p>The <code>doc</code> directory contains <a href="doc/html/index.html">documentation</a> describing the general architecture of the system and how to create new devices and new applications.
 The source code is also fairly commented.</p>
 
 <p>So read the documentation, read the code and hack away!</p>
@@ -93,6 +93,7 @@ The source code is also fairly commented.</p>
 
 </body>
 </html>
+
 
     </div>
     <script type="text/javascript" src="doc/assets/js/jquery-1.11.0.min.js"></script>
